Reporting internal events

--- a/.env.example
+++ b/.env.example
@@ -6,4 +6,4 @@ RPC_ADDRESS=
 RPC_PRIVATE_KEY=
 
 AUCTION_URL=ws://auction:8000
-PUBLISHER_URL=http://publisher:8000
+EVENT_REPORTER_URL=http://backend:8000/new-event
